Fixed jar and run instructions